# leanffmpeg

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/libavutil/: ffversion.h
app/libs/include/x264/: x264.h
app/src/androidTest/java/ffmpeg/gwj/dev/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CtxHolder.cpp  Decoder.cpp  Decoder.h  InputFile.cpp  Makefile  Output.cpp  YuvUtil.h  cc.pcm  compile_commands.json  debug.py  debug.sh  gdbcommands.txt  h264-lib.cpp  main.cpp  native-lib.cpp  native_log.h  push-lib.cpp  run.sh
app/src/main/cpp/.cache/clangd/index/: Decoder.cpp.25C3395D3E9F54C3.idx  Decoder.h.0DC5946002F3BAD7.idx  Decoder.h.3F7D44535452BC92.idx  InputFile.cpp.09E3BF954E1C0919.idx  InputFile.h.73403F3165D2DB09.idx  InputFile.h.DD0C63042D4557DF.idx  Player.h.B1D0C35FEAE1FFDE.idx
app/src/main/cpp/jni/: ffmpeg-invoke.cpp  native-lib.cpp  videoEdit-lib.cpp
app/src/main/cpp/jni/glplayer/: VideoSurface.h  player.cpp  player.h  surface.cpp
app/src/main/cpp/src/: Clock.cpp  Clock.h  CtxHolder.cpp  Decoder.cpp  Decoder.h  InputFile.cpp  InputFile.h  Log.h  Player.cpp  Player.h  SafeVector.cpp  SafeVector.h  VideoState.cpp  VideoState.h
app/src/main/cpp/src_ffcmd/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
app/src/main/cpp/unix/: CMakeCache.txt  CMakeLists.txt  Makefile  a  build_ffmpeg_android.sh  build_x264_android.sh  cmake_build.sh  compile_commands.json  gdbcommands.txt  main.cpp  run.sh
app/src/main/cpp/unix/.cache/clangd/index/: basic_types.h.823FD034B92E9CED.idx  basic_types.h.BF675D9EFDB2ED77.idx  compare.h.94BD2C058644E366.idx  compare.h.EB247B259D983875.idx  convert.h.8E4510296E8FEEAB.idx  convert.h.9C1C1A3ACB303952.idx  convert_argb.h.74E0FB290440464C.idx  convert_argb.h.9AE4EB235F7C1984.idx  convert_from.h.129705BEDC4BF347.idx  convert_from.h.B392A4C77CA22E85.idx  convert_from_argb.h.6A00F4CD57EB91B4.idx  convert_from_argb.h.81328D162D84830C.idx  cpu_id.h.2B6B3134B9C37FF5.idx  cpu_id.h.85549EF3439A8928.idx  libyuv.h.3586415BF716D757.idx  libyuv.h.5FC204B947286810.idx  main.cpp.3748C6DF757EC40B.idx  main.cpp.E04447C3A02EF397.idx  mjpeg_decoder.h.6EB1B2AE7A1380E9.idx  mjpeg_decoder.h.8600D60DE83DCF95.idx  planar_functions.h.779A3C056C38A7F0.idx  planar_functions.h.AFEB23B604052000.idx  rotate.h.0F2AD36A10240A69.idx  rotate.h.1E8FCF7839E818CE.idx  rotate_argb.h.2A9C6CD66613546A.idx  rotate_argb.h.C7158F9EBD28B87F.idx  row.h.344520AD6C66D0C1.idx  row.h.8BE74A26E49D1FE0.idx  scale.h.91072766DD82FFB7.idx  scale.h.BF49FF62A30CFA74.idx  scale_argb.h.2E3D63F117F702A2.idx  scale_argb.h.723F6DCCD2C2EBE1.idx  scale_row.h.391E4D36D478F4A8.idx  scale_row.h.EEBA67BC514C01B2.idx  version.h.4BFFBFED086638EE.idx  version.h.EF347B555A87F1FA.idx  video_common.h.28A8C35C2792A6EF.idx  video_common.h.3576F86F90AABE4A.idx
app/src/main/java/gwj/dev/ffmpeg/: DemoH264Activity.java  MainActivity.java  PushStreamActivity.java  PushUtil.java  TouchActivity.java  VideoEditActivity.java  VideoEditFragment.java
app/src/main/java/gwj/dev/ffmpeg/ffmpegCmd/: FFmpegCmd.java
app/src/main/java/gwj/dev/ffmpeg/glplayer/: PlayInOpenGlActivity.java  VideoSurface.java
app/src/main/java/gwj/dev/ffmpeg/videoEdit/: IHorizentalScale.java  ITimeDistanceListener.java  ITimedContants.java  PreviewContainer.java  TimeLine.java  TouchContainer.java  TouchContainer_back.java  VContainer.java  VPreviewContainer.java  VideoAPI.java
app/src/main/java/gwj/dev/ffmpeg/videoEdit/material/: Material.java  MaterialFactory.java  VideoMaterial.java
app/src/main/jniLibs/include/libavcodec/: avcodec.h
app/src/main/jniLibs/include/libavfilter/: avfilter.h
app/src/main/jniLibs/include/libavutil/: ffversion.h  frame.h
app/src/main/jniLibs/include/x264/: x264.h
app/src/main/res/layout/: activity_camera.xml  activity_glplay.xml  activity_main.xml  activity_pusher.xml  activity_touch_view.xml  activity_video_edit.xml  fragment_video_edit.xml
app/src/test/java/ffmpeg/gwj/dev/ffmpeg/: ExampleUnitTest.java
docs/: dn_audio_player.c
